examples/datalog/11_types/21_string_ops.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_str_ops
Knowledge graph 'test_str_ops' created.
Switched to knowledge graph: test_str_ops
> .kg use test_str_ops
Switched to knowledge graph: test_str_ops
> +names[(1, "alice"), (2, "bob"), (3, "alice"), (4, "carol")].
Inserted 4 fact(s) into 'names'.
> is_alice(Id) :- names(Id, "alice").
2 rows:
  (1)
  (3)
(session: 1 rule(s))
> ?- is_alice(Id).
2 rows:
  (1)
  (3)
> distinct_name(N) :- names(_, N).
3 rows:
  ("alice")
  ("bob")
  ("carol")
(session: 2 rule(s))
> ?- distinct_name(N).
3 rows:
  ("alice")
  ("bob")
  ("carol")
> +name_count(Name, <COUNT:Id>) :- names(Id, Name).
Script error: Parse error: Invalid term: '<COUNT:Id>'
